# agent-manager

./: .gitignore  CONTRIBUTING.md  README.md  TASKS.md  agent-lock.json  go.mod  go.sum  main.go  progress.txt  pyproject.toml
.github/workflows/: ci.yml
.opencode/skills/: showboat
commands/: agents.go  commands_test.go  hello.go  hello_test.go  packs.go  registry.go  skills.go
internal/agents/: agents.go  agents_test.go
internal/models/: models.go
internal/skills/: skills.go  skills_test.go  summary.go
internal/storage/: lockfile.go  lockfile_test.go  packs.go  skill_summaries.go  storage.go  storage_test.go
internal/tui/: agents.go  agents_test.go  packs.go  registry.go  skill_summary.go  skills.go  skills_test.go
plans/: 01-mvp.md  02-lock-file.md
skill_manager/: cli.py
tests/: test_skill_manager.py
